# esp32_usb_repeater

./: .gitignore  README.md
Test/: Device_Keyboard.pcapng  Device_Mouse.pcapng
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt
firmware/main/include/: global.h  tcp_connect.h  usb_handler.h  usbip_server.h
firmware/main/src/: main.c  tcp_connect.c  usb_handler.c  usbip_server.c
